--- a/index.html
+++ b/index.html
@@ -6,105 +6,132 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebStudio-Home</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
+    integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
+    crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./styles/styles.css">
+
 </head>
 
 <body>
-  <header>
-    <a class="logo" href="" lang="en"><span>Web</span>Studio</a>
-    <nav>
-      <ul>
-        <li>
-          <a class="studio" href="./index.html">Студия</a>
+  <!-- HEADER -->
+  <header class="header">
+    <a class="logo link" href="" lang="en">Web<span class="logo-studio-header">Studio</span></a>
+    <nav class="menu">
+      <ul class="list">
+        <li class="nav-item">
+          <a class="nav-link current" href="./index.html">Студия</a>
         </li>
-        <li>
-          <a class="portfolio" href="./portfolio.html">Портфолио</a>
+        <li class="nav-item">
+          <a class="nav-link" href="./portfolio.html">Портфолио</a>
         </li>
-        <li>
-          <a class="contacts" href="https://www.devstudio.com/portfolio">Контакты</a>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.devstudio.com/portfolio">Контакты</a>
         </li>
       </ul>
       <div>
-        <ul>
+        <ul class="list">
           <li>
-            <a class="email-link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+            <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
           </li>
-          <li>+38 096 111 11 11</li>
+          <li>
+            <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
     </nav>
   </header>
   <main>
-  <section>
-    <h1>Эффективные решения для вашего бизнеса</h1>
-    <button type="submit">Заказать услугу</button>
-  </section>
-  <ul>
-    <li>
-      <h3>Внимание к деталям</h3>
-      <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-    </li>
-    <li>
-      <h3>Пунктуальность</h3>
-      <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-    </li>
-    <li>
-      <h3>Планирование</h3>
-      <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-    </li>
-    <li>
-      <h3>Современные технологии</h3>
-      <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-    </li>
-  </ul>
-  <section>
-    <h3>Чем мы занимаемся</h3>
-     <ul>
-      <li>
-        <img src="./images/what_we_do/what_we_do_1.jfif" alt="software developer working" width="370" height="294"
-          lang="en">
-      </li>
-      <li>
-        <img src="./images/what_we_do/what_we_do_2.jfif" alt="women with a phone" width="370" height="294" lang="en">
-      </li>
-      <li>
-        <img src="./images/what_we_do/what_we_do_3.jfif" alt="women working on a tablet" width="370" height="294"
-          lang="en">
-      </li>
-     </ul>
-  </section>
-  <section>
-    <h3>Наша команда</h3>
-    <ul>
-      <li>
-        <img src="./images/our_masters/master_1.jfif" alt="friendly men in glasses" width="270" height="260" lang="en">
-        <h3>Игорь Демьяненко</h3>
-        <p lang="en">Product Designer</p>
-      </li>
-      <li>
-        <img src="./images/our_masters/master_2.jfif" alt="blonde women" width="270" height="260" lang="en">
-        <h3>Ольга Репина</h3>
-        <p lang="en">Frontend Developer</p>
-      </li>
-      <li>
-        <img src="./images/our_masters/master_3.jfif" alt="smiling men" width="270" height="260" lang="en">
-        <h3>Николай Тарасов</h3>
-        <p lang="en">Marketing</p>
-      </li>
-      <li>
-        <img src="./images/our_masters/master_4.jfif" alt="friendly men in black t-shirt" width="270" height="260"
-          lang="en">
-        <h3>Михаил Ермаков</h3>
-        <p lang="en">UI Designer</p>
-      </li>
-    </ul>
-  </section>
+    <!-- HERO -->
+    <section class="hero">
+      <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+      <button class="modal-btn" type="submit">Заказать услугу</button>
+    </section>
+    <!-- SPECIALTIES -->
+    <section class="specialties">
+      <h2 hidden>Особенности</h2>
+      <ul class="specs-list list">
+        <li class="specs-list-item">
+          <h3 class="specs-subtitle">Внимание к деталям</h3>
+          <p class="specs-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        </li>
+        <li class="specs-list-item">
+          <h3 class="specs-subtitle">Пунктуальность</h3>
+          <p class="specs-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+        </li>
+        <li class="specs-list-item">
+          <h3 class="specs-subtitle">Планирование</h3>
+          <p class="specs-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+        </li>
+        <li class="specs-list-item">
+          <h3 class="specs-subtitle">Современные технологии</h3>
+          <p class="specs-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+        </li>
+      </ul>
+    </section>
+    <!-- SKILLS -->
+    <section class="skills">
+      <h2 class="skills-title">Чем мы занимаемся</h2>
+      <ul class="skills-list list">
+        <li class="skills-list-item">
+          <img class="img" src="./images/what_we_do/what_we_do_1.jfif" alt="software developer working" width="370"
+            height="294" lang="en">
+        </li>
+        <li class="skills-list-item">
+          <img class="img" src="./images/what_we_do/what_we_do_2.jfif" alt="women with a phone" width="370" height="294"
+            lang="en">
+        </li>
+        <li class="skills-list-item">
+          <img class="img" src="./images/what_we_do/what_we_do_3.jfif" alt="women working on a tablet" width="370"
+            height="294" lang="en">
+        </li>
+      </ul>
+    </section>
+    <!-- TEAM -->
+    <section class="team">
+      <h2 class="team-title">Наша команда</h2>
+      <ul class="team-list list">
+        <li class="team-list-item">
+          <img class="team-img" src="./images/our_masters/master_1.jfif" alt="friendly men in glasses" width="270"
+            height="260" lang="en">
+          <h3 class="team-name">Игорь Демьяненко</h3>
+          <p class="team-occupation" lang="en">Product Designer</p>
+        </li>
+        <li class="team-list-item">
+          <img class="team-img" src="./images/our_masters/master_2.jfif" alt="blonde women" width="270" height="260"
+            lang="en">
+          <h3 class="team-name">Ольга Репина</h3>
+          <p class="team-occupation" lang="en">Frontend Developer</p>
+        </li>
+        <li class="team-list-item">
+          <img class="team-img" src="./images/our_masters/master_3.jfif" alt="smiling men" width="270" height="260"
+            lang="en">
+          <h3 class="team-name">Николай Тарасов</h3>
+          <p class="team-occupation" lang="en">Marketing</p>
+        </li>
+        <li class="team-list-item">
+          <img class="team-img" src="./images/our_masters/master_4.jfif" alt="friendly men in black t-shirt" width="270"
+            height="260" lang="en">
+          <h3 class="team-name">Михаил Ермаков</h3>
+          <p class="team-occupation" lang="en">UI Designer</p>
+        </li>
+      </ul>
+    </section>
   </main>
-  <footer>
-    <a class="logo_footer" href="" lang="en"><span>Web</span>Studio</a>
-    <p>г. Киев, пр-т Леси Украинки, 26</p>
-    <ul>
-      <li><a class="email-link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a class="tel-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
+  <!-- FOOTER -->
+  <footer class="footer">
+    <a class="logo link" href="" lang="en">Web<span class="logo-studio-footer">Studio</span></a>
+    <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+    <ul class="address-list list">
+      <li class="address-list-item">
+        <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      </li>
+      <li class="address-list-item">
+        <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+      </li>
     </ul>
   </footer>
 </body>
