--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <!-- HEADER -->
   <header class="header">
-    <a class="logo link" href="" lang="en">Web<span class="logo-studio-header">Studio</span></a>
+    <a class="logo link" href="" lang="en">Web<span class="logo-studio-header" lang="en">Studio</span></a>
     <nav class="menu">
       <ul class="list">
         <li class="nav-item">
@@ -32,12 +32,12 @@
           <a class="nav-link" href="https://www.devstudio.com/portfolio">Контакты</a>
         </li>
       </ul>
-      <div>
+      <div class="header-contacts">
         <ul class="list">
-          <li>
+          <li class="header-contacts-list">
             <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="header-contacts-list">
             <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -77,16 +77,13 @@
       <h2 class="skills-title">Чем мы занимаемся</h2>
       <ul class="skills-list list">
         <li class="skills-list-item">
-          <img class="img" src="./images/what_we_do/what_we_do_1.jfif" alt="software developer working" width="370"
-            height="294" lang="en">
+          <img class="img" src="./images/what_we_do/what_we_do_1.jpg" alt="software developer working" lang="en">
         </li>
         <li class="skills-list-item">
-          <img class="img" src="./images/what_we_do/what_we_do_2.jfif" alt="women with a phone" width="370" height="294"
-            lang="en">
+          <img class="img" src="./images/what_we_do/what_we_do_2.jpg" alt="women with a phone" lang="en">
         </li>
         <li class="skills-list-item">
-          <img class="img" src="./images/what_we_do/what_we_do_3.jfif" alt="women working on a tablet" width="370"
-            height="294" lang="en">
+          <img class="img" src="./images/what_we_do/what_we_do_3.jpg" alt="women working on a tablet" lang="en">
         </li>
       </ul>
     </section>
@@ -95,26 +92,22 @@
       <h2 class="team-title">Наша команда</h2>
       <ul class="team-list list">
         <li class="team-list-item">
-          <img class="team-img" src="./images/our_masters/master_1.jfif" alt="friendly men in glasses" width="270"
-            height="260" lang="en">
+          <img class="team-img" src="./images/our_masters/master_1.jpg" alt="friendly men in glasses" lang="en">
           <h3 class="team-name">Игорь Демьяненко</h3>
           <p class="team-occupation" lang="en">Product Designer</p>
         </li>
         <li class="team-list-item">
-          <img class="team-img" src="./images/our_masters/master_2.jfif" alt="blonde women" width="270" height="260"
-            lang="en">
+          <img class="team-img" src="./images/our_masters/master_2.jpg" alt="blonde women" lang="en">
           <h3 class="team-name">Ольга Репина</h3>
           <p class="team-occupation" lang="en">Frontend Developer</p>
         </li>
         <li class="team-list-item">
-          <img class="team-img" src="./images/our_masters/master_3.jfif" alt="smiling men" width="270" height="260"
-            lang="en">
+          <img class="team-img" src="./images/our_masters/master_3.jpg" alt="smiling men" lang="en">
           <h3 class="team-name">Николай Тарасов</h3>
           <p class="team-occupation" lang="en">Marketing</p>
         </li>
         <li class="team-list-item">
-          <img class="team-img" src="./images/our_masters/master_4.jfif" alt="friendly men in black t-shirt" width="270"
-            height="260" lang="en">
+          <img class="team-img" src="./images/our_masters/master_4.jpg" alt="friendly men in black t-shirt" lang="en">
           <h3 class="team-name">Михаил Ермаков</h3>
           <p class="team-occupation" lang="en">UI Designer</p>
         </li>
@@ -123,7 +116,7 @@
   </main>
   <!-- FOOTER -->
   <footer class="footer">
-    <a class="logo link" href="" lang="en">Web<span class="logo-studio-footer">Studio</span></a>
+    <a class="logo link" href="" lang="en">Web<span class="logo-studio-footer" lang="en">Studio</span></a>
     <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
     <ul class="address-list list">
       <li class="address-list-item">
