--- a/portfolio.html
+++ b/portfolio.html
@@ -2,132 +2,145 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebStudio-Portfolio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WebStudio-Portfolio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
+    integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
+    crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
+
 <body>
- <header>
-    <a class="logo" href="" lang="en"><span>Web</span>Studio</a>
-    <nav>
-      
-        <ul>
-            <li>
-                <a class="studio" href="./index.html">Студия</a>
-            </li>
-            <li>
-                <a class="portfolio" href="./portfolio.html">Портфолио</a>
-            </li>
-            <li>
-                <a class="contacts" href="https://www.devstudio.com/portfolio">Контакты</a>
-            </li>
+  <header>
+    <a class="logo link" href="" lang="en">Web<span class="logo-studio-header" lang="en">Studio</span></a>
+    <nav class="menu">
+      <ul class="list">
+        <li class="nav-item">
+          <a class="nav-link" href="/index.html">Студия</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link current" href="https://www.devstudio.com/portfolio">Портфолио</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.devstudio.com/portfolio">Контакты</a>
+        </li>
+      </ul>
+      <div class="header-contacts">
+        <ul class="list">
+          <li class="header-contacts-list">
+            <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+          </li>
+          <li class="header-contacts-list">
+            <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
-        <div>
-            <ul>
-                <li>
-                    <a class="email-link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
-                </li>
-                <li>+38 096 111 11 11</li>
-            </ul>
-        </div>
+      </div>
     </nav>
- </header>
- <main>
-  <section>
-    <h2 hidden>Наши работы</h2>
-    <ul>
-      <li>
-        <button type="button">Все</button>
+  </header>
+  <main>
+    <section class="examples">
+      <h2 hidden>Наши работы</h2>
+      <ul class="examples-list list">
+        <li class="examples-list-item">
+          <button class="nav-btn" type="button">Все</button>
+        </li>
+        <li class="examples-list-item">
+          <button class="nav-btn" type="button">Веб-сайты</button>
+        </li>
+        <li class="examples-list-item">
+          <button class="nav-btn" type="button">Приложения</button>
+        </li>
+        <li class="examples-list-item">
+          <button class="nav-btn" type="button">Дизайн</button>
+        </li>
+        <li class="examples-list-item">
+          <button class="nav-btn" type="button">Маркетинг</button>
+        </li>
+      </ul>
+      <ul class="examples-img-list list">
+        <li class="examples-img-item">
+          <h2 class="examples-img-title">Технокряк</h2>
+          <p class="examples-img-about">Веб-сайт</p>
+          <a class="list-items" href="">
+            <img class="img" src="./images/portfolio/portfolio-1.jpg" alt="laptop desctop">
+          </a>
+        </li>
+        <li class="examples-img-item">
+          <h2 class="examples-img-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+          <p class="examples-img-about">Дизайн</p>
+          <a class="list-items" href="">
+            <img class="img" src="./images/portfolio/portfolio-2.jpg" alt="two basketball players">
+          </a>
+        </li>
+        <li class="examples-img-item">
+          <h2 class="examples-img-title">Ресторан <span lang="en">Seafood</span></h2>
+          <p class="examples-img-about">Приложение</p>
+          <a class="list-items" href="">
+            <img class="img" src="./images/portfolio/portfolio-3.jpg" alt="fish restaurant logo">
+          </a>
+        </li>
+        <li class="examples-img-item">
+          <h2 class="examples-img-title">Проект <span lang="en">Prime</span></h2>
+          <p class="examples-img-about">Маркетинг</p>
+          <a class="list-items" href="">
+            <img class="img" src="./images/portfolio/portfolio-4.jpg" alt="headphones">
+          </a>
+        </li>
+        <li class="examples-img-item">
+          <h2 class="examples-img-title">Проект <span lang="en">Boxes</span></h2>
+          <p class="examples-img-about">Приложение</p>
+          <a class="list-items" href="">
+            <img class="img" src="./images/portfolio/portfolio-5.jpg" alt="two boxes">
+          </a>
+        </li>
+        <li class="examples-img-item">
+          <h2 class="examples-img-title" lang="en">Inspiration has no Borders</h2>
+          <p class="examples-img-about">Веб-сайт</p>
+          <a class="list-items" href="">
+            <img class="img" src="./images/portfolio/portfolio-6.jpg" alt="computer display">
+          </a>
+        </li>
+        <li class="examples-img-item">
+          <h2 class="examples-img-title">Издание <span lang="en">Limited Edition</span></h2>
+          <p class="examples-img-about">Дизайн</p>
+          <a class="list-items" href="">
+            <img class="img" src="./images/portfolio/portfolio-7.jpg" alt="opened magazine">
+          </a>
+        </li>
+        <li class="examples-img-item">
+          <h2 class="examples-img-title">Проект <span lang="en">LAB</span></h2>
+          <p class="examples-img-about">Маркетинг</p>
+          <a class="list-items" href="">
+            <img class="img" src="./images/portfolio/portfolio-8.jpg" alt="some label">
+          </a>
+        </li>
+        <li class="examples-img-item">
+          <h2 class="examples-img-title" lang="en">Growing Business</h2>
+          <p class="examples-img-about">Приложение</p>
+          <a class="list-items" href="">
+            <img class="img" src="./images/portfolio/portfolio-9.jpg" alt="man working on a laptop">
+          </a>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer class="footer">
+    <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-footer" lang="en">Studio</span></a>
+    <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+    <ul class="address-list list">
+      <li class="address-list-item">
+        <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
       </li>
-      <li>
-        <button type="button">Веб-сайты</button>
-      </li>
-      <li>
-        <button type="button">Приложения</button>
-      </li>
-      <li>
-        <button type="button">Дизайн</button>
-      </li>
-      <li>
-        <button type="button">Маркетинг</button>
+      <li class="address-list-item">
+        <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
       </li>
     </ul>
-    <ul>
-      <li>
-        <h2>Технокряк</h2>
-        <p>Веб-сайт</p>
-        <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-1.jpg" alt="laptop desctop" width="370">
-        </a>
-      </li>
-      <li>
-        <h2>Постер New Orlean vs Golden Star</h2>
-        <p>Дизайн</p>
-        <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-2.jpg" alt="two basketball players" width="370">
-        </a>
-      </li>
-      <li>
-        <h2>Ресторан Seafood</h2>
-        <p>Приложение</p>
-        <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-3.jpg" alt="fish restaurant logo" width="370">
-        </a>
-      </li>
-      <li>
-        <h2>Проект Prime</h2>
-        <p>Маркетинг</p>
-        <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-4.jpg" alt="headphones" width="370">
-        </a>
-      </li>
-      <li>
-        <h2>Проект Boxes</h2>
-        <p>Приложение</p>
-        <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-5.jpg" alt="two boxes" width="370">
-        </a>
-      </li>
-      <li>
-        <h2>Inspiration has no Borders</h2>
-        <p>Веб-сайт</p>
-        <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-6.jpg" alt="computer display" width="370">
-        </a>
-      </li>
-      <li>
-        <h2>Издание Limited Edition</h2>
-        <p>Дизайн</p>
-        <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-7.jpg" alt="opened magazine" width="370">
-        </a>
-      </li>
-      <li>
-        <h2>Проект LAB</h2>
-        <p>Маркетинг</p>
-        <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-8.jpg" alt="some label" width="370">
-        </a>
-      </li>
-      <li>
-        <h2>Growing Business</h2>
-        <p>Приложение</p>
-        <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-9.jpg" alt="man working on a laptop" width="370">
-        </a>
-      </li>
-    </ul>
-  </section>
- </main>
- <footer>
-    <a class="logo_footer" href="" lang="en"><span>Web</span>Studio</a>
-    <p>г. Киев, пр-т Леси Украинки, 26</p>
-    <ul>
-        <li><a class="email-link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="tel-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
-    </ul>
- </footer>
+  </footer>
 </body>
 
 </html>
