--- a/index.html
+++ b/index.html
@@ -19,30 +19,32 @@
 <body>
   <!-- HEADER -->
   <header class="header">
-    <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-header" lang="en">Studio</span></a>
-    <nav class="menu">
-      <ul class="list">
-        <li class="nav-item">
-          <a class="nav-link current" href="./index.html">Студия</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./portfolio.html">Портфолио</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.devstudio.com/portfolio">Контакты</a>
-        </li>
-      </ul>
-      <div class="header-contacts">
+    <div class="container">
+      <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-header" lang="en">Studio</span></a>
+      <nav class="menu">
         <ul class="list">
-          <li class="header-contacts-list">
-            <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+          <li class="nav-item">
+            <a class="nav-link current" href="./index.html">Студия</a>
           </li>
-          <li class="header-contacts-list">
-            <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="nav-item">
+            <a class="nav-link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.devstudio.com/portfolio">Контакты</a>
           </li>
         </ul>
-      </div>
-    </nav>
+        <div class="header-contacts">
+          <ul class="list">
+            <li class="header-contacts-list">
+              <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+            </li>
+            <li class="header-contacts-list">
+              <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
   <main>
     <!-- HERO -->
