--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
     <!-- SPECIALTIES -->
     <section class="specialties">
-      <h2 hidden>Особенности</h2>
+      <h2 visually-hidden>Особенности</h2>
       <ul class="specs-list list">
         <li class="specs-list-item">
           <h3 class="specs-subtitle">Внимание к деталям</h3>
